--- a/micro-svc/micro-svc-deployment.yaml
+++ b/micro-svc/micro-svc-deployment.yaml
@@ -1,6 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  annotations:                                                                                                                                                              
+    sidecar.istio.io/inject: "true"   
   name: micro-svc-deployment
 spec:
   containers:
