added istio gw and vs

--- a/confs/micro-svc/application.properties
+++ b/confs/micro-svc/application.properties
@@ -1,7 +1,7 @@
 server.port = 8181
 keycloak.enabled=true
 keycloak.realm=master
-keycloak.auth-server-url=https://iam.vger.sys.one.pl/auth
+keycloak.auth-server-url=https://iam.apps.k0.sys.one.pl/auth
 keycloak.resource=account
 keycloak.ssl-required=external
 keycloak.bearer-only=true
