--- a/iam/iam-deployment.yaml
+++ b/iam/iam-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       annotations:
         sidecar.istio.io/inject: "true"
+        readiness.status.sidecar.istio.io/applicationPorts: ""
       labels:
         deployment: iam
     spec:
@@ -60,5 +61,8 @@ spec:
         ports:
         -
           containerPort: 8443
+          name: https-common
           protocol: "TCP"
+        securityContext:
+          privileged: false
       serviceAccountName: "msa-account"
