--- a/iam/iam-deployment.yaml
+++ b/iam/iam-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: iam-deployment
 spec:
   replicas: 1
-  minReadySeconds: 30
+  minReadySeconds: 60
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -14,7 +14,6 @@ spec:
     metadata:
       annotations:
         sidecar.istio.io/inject: "true"
-        readiness.status.sidecar.istio.io/applicationPorts: ""
       labels:
         deployment: iam
     spec:
@@ -40,7 +39,8 @@ spec:
             command:
             - /bin/sh
             - -c
-            - 'curl -k https://localhost:8443'
+            - 'curl -k https://127.0.0.1:8443'
+# Istio configures mutual SSL #
           initialDelaySeconds: 20
           periodSeconds: 10
           failureThreshold: 18
@@ -49,7 +49,8 @@ spec:
             command:
               - /bin/sh
               - -c
-              - 'curl -k https://localhost:8443'
+              - 'curl -k https://127.0.0.1:8443'
+# Istio configures mutual SSL #
           initialDelaySeconds: 20
           periodSeconds: 10
           failureThreshold: 18
