--- a/spa/spa-deployment.yaml
+++ b/spa/spa-deployment.yaml
@@ -62,7 +62,7 @@ spec:
         - name: spa-cors
           mountPath: /etc/nginx/conf.d
         securityContext:
-          privileged: false
+          privileged: true
       serviceAccountName: "msa-account"
       volumes:
       - name: spa-files
